--- a/index.html
+++ b/index.html
@@ -360,6 +360,137 @@
             <div class="col-xs-12 lead"><p>Part I: LMP sensitivity on load variation</p><p>PJM 5 bus system</p></div>
         </div>
     </div>
+    <section class="mbr-section article mbr-section__container" id="content1-m" data-rv-view="247" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 lead"><p>Generation Parameters&nbsp;</p>
+                  <table style="width:100%">
+                    <tr>
+                      <th>Gen. Name</th>
+                      <th>Alta($/MWhr)</th>
+                      <th>Park City</th>
+                      <th>Solitude</th>
+                      <th>Sundance</th>
+                      <th>Brighton</th>
+                    </tr>
+                    <tr>
+                      <th>Bus</th>
+                      <th>A</th>
+                      <th>A</th>
+                      <th>C</th>
+                      <th>D</th>
+                      <th>E</th>
+                    </tr>
+                    <tr>
+                      <th>Cost($/MWhr)</th>
+                      <th>14</th>
+                      <th>15</th>
+                      <th>30</th>
+                      <th>40</th>
+                      <th>10</th>
+                    </tr>
+                    <tr>
+                      <th>MW Limit</th>
+                      <th>40</th>
+                      <th>170</th>
+                      <th>520</th>
+                      <th>200</th>
+                      <th>600</th>
+                    </tr>
+                    <tr>
+                      <th>MVar Limit</th>
+                      <th>+-30</th>
+                      <th>+-127.5</th>
+                      <th>+-390</th>
+                      <th>+-150</th>
+                      <th>+-450</th>
+                    </tr>
+                  </table>
+                  <p>Load data&nbsp;</p>
+                  <table style="width:100%">
+                    <tr>
+                      <th>Bus</th>
+                      <th>A</th>
+                      <th>A</th>
+                      <th>C</th>
+                      <th>D</th>
+                      <th>E</th>
+                    </tr>
+
+                    <tr>
+                      <th>MW</th>
+                      <th>0</th>
+                      <th>300</th>
+                      <th>300</th>
+                      <th>400</th>
+                      <th>0</th>
+                    </tr>
+                    <tr>
+                      <th>MVar</th>
+                      <th>0</th>
+                      <th>98.61</th>
+                      <th>98.61</th>
+                      <th>131.47</th>
+                      <th>0</th>
+                    </tr>
+                  </table>
+                  <p>Line data&nbsp;</p>
+                  <table style="width:100%">
+                    <tr>
+                      <th>Line</th>
+                      <th>AB</th>
+                      <th>AD</th>
+                      <th>AE</th>
+                      <th>BC</th>
+                      <th>CD</th>
+                      <th>DE</th>
+                    </tr>
+
+                    <tr>
+                      <th>R(%)</th>
+                      <th>0.281</th>
+                      <th>0.304</th>
+                      <th>0.0064</th>
+                      <th>0.108</th>
+                      <th>0.297</th>
+                      <th>0.297</th>
+                    </tr>
+                    <tr>
+                      <th>X(%)</th>
+                      <th>2.81</th>
+                      <th>3.04</th>
+                      <th>0.64</th>
+                      <th>1.08</th>
+                      <th>2.97</th>
+                      <th>2.97</th>
+                    </tr>
+                    <tr>
+                      <th>B/2(%)</th>
+                      <th>3.56</th>
+                      <th>3.29</th>
+                      <th>15.63</th>
+                      <th>9.26</th>
+                      <th>3.37</th>
+                      <th>3.37</th>
+                    </tr>
+                    <tr>
+                      <th>Limit (MVA)</th>
+                      <th>400</th>
+                      <th>-</th>
+                      <th>-</th>
+                      <th>-</th>
+                      <th>-</th>
+                      <th>240</th>
+                    </tr>
+                  </table>
+
+
+                </div>
+            </div>
+        </div>
+
+    </section>
 
 </section>
 <!-- Insert plotly of 5bus PJM HBF-BF -->
@@ -368,11 +499,6 @@
 <div>
     <a href="https://plot.ly/~chaweewatp/127/?share_key=WcmgdMhP8HSXuZxsQGfhTt" target="_blank" title="PJM-5bus-network" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/127.png?share_key=WcmgdMhP8HSXuZxsQGfhTt" alt="PJM-5bus-network" style="max-width: 50%;width: 100px;"  width="100" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
     <script data-plotly="chaweewatp:127" sharekey-plotly="WcmgdMhP8HSXuZxsQGfhTt" src="https://plot.ly/embed.js" async></script>
-</div>
-
-<div>
-    <a href="https://plot.ly/~chaweewatp/38/?share_key=OwDxMlbuczAHOOhK9aFdVm" target="_blank" title="5bus-PIPSvsHeuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/38.png?share_key=OwDxMlbuczAHOOhK9aFdVm" alt="5bus-PIPSvsHeuristic-PIPS" style="max-width: 50%;width: 100px;"  width="100" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
-    <script data-plotly="chaweewatp:38" sharekey-plotly="OwDxMlbuczAHOOhK9aFdVm" src="https://plot.ly/embed.js" async></script>
 </div>
 
 
@@ -385,6 +511,13 @@
     </div>
 
 </section>
+
+<div>
+    <a href="https://plot.ly/~chaweewatp/38/?share_key=OwDxMlbuczAHOOhK9aFdVm" target="_blank" title="5bus-PIPSvsHeuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/38.png?share_key=OwDxMlbuczAHOOhK9aFdVm" alt="5bus-PIPSvsHeuristic-PIPS" style="max-width: 50%;width: 100px;"  width="100" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+    <script data-plotly="chaweewatp:38" sharekey-plotly="OwDxMlbuczAHOOhK9aFdVm" src="https://plot.ly/embed.js" async></script>
+</div>
+
+
 
 <section class="mbr-section article mbr-section__container" id="content1-k" data-rv-view="243" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
