add column 118 bus load data table

--- a/index.html
+++ b/index.html
@@ -535,6 +535,9 @@
                   <th>Bus</th>
                   <th>MW</th>
                   <th>MVar</th>
+                  <th>Bus</th>
+                  <th>MW</th>
+                  <th>MVar</th>
                 </tr>
                 <tr>
                   <th>1</th>
@@ -546,6 +549,23 @@
                   <th>3</th>
                   <th>39</th>
                   <th>10</th>
+                  <th>4</th>
+                  <th>39</th>
+                  <th>12</th>
+                </tr>
+                <tr>
+                  <th>6</th>
+                  <th>52</th>
+                  <th>22</th>
+                  <th>7</th>
+                  <th>19</th>
+                  <th>2</th>
+                  <th>8</th>
+                  <th>28</th>
+                  <th>0</th>
+                  <th>11</th>
+                  <th>70</th>
+                  <th>23</th>
                 </tr>
 
               </table>
