add LMP calculation subtitle

--- a/index.html
+++ b/index.html
@@ -341,6 +341,16 @@
         </div>
     </div>
 </section>
+<section class="mbr-section mbr-section__container article" id="header3-7" data-rv-view="97" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <small class="mbr-section-subtitle">LMP calculation</small>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Simulation Result -->
 <section class="mbr-section mbr-section__container article" id="header3-e" data-rv-view="223" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
@@ -757,11 +767,11 @@
 
 </section>
 <!-- Insert plotly of 118bus HBF-BF -->
-
 <div>
     <a href="https://plot.ly/~chaweewatp/124/?share_key=CnctLcJDmuHlhrt2y7q72Q" target="_blank" title="118bus-PIPSvsHeuristic-PIPS_all_bus" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/124.png?share_key=CnctLcJDmuHlhrt2y7q72Q" alt="118bus-PIPSvsHeuristic-PIPS_all_bus" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
     <script data-plotly="chaweewatp:124" sharekey-plotly="CnctLcJDmuHlhrt2y7q72Q" src="https://plot.ly/embed.js" async></script>
 </div>
+
 <section class="mbr-section article mbr-section__container" id="content1-m" data-rv-view="247" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
@@ -904,11 +914,11 @@
 
 <section class="mbr-section article mbr-section__container" id="content1-p" data-rv-view="263" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><p>This LMP sensitivity will be sent to retailer to engage with price based demand response. (Future work)</p></div>
-        </div>
-    </div>
+  <div class="container">
+      <div class="row">
+          <div class="col-xs-12 lead"><p>This LMP sensitivity will be sent to retailer to engage with price based demand response. (Future work)</p></div>
+      </div>
+  </div>
 
 </section>
 
