--- a/index.html
+++ b/index.html
@@ -351,6 +351,15 @@
     </div>
 </section>
 
+<section class="mbr-section article mbr-section__container" id="content1-o" data-rv-view="261" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 lead"><p>Make your own website in a few clicks! Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. MobiRise Website Builder creates responsive, retina and mobile friendly websites in a few clicks. Mobirise is one of the easiest website development tools <a href="http://google.com/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.</p></div>
+        </div>
+    </div>
+
+</section> -->
 <!-- Simulation Result -->
 <section class="mbr-section mbr-section__container article" id="header3-e" data-rv-view="223" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
