--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
+              <h3 class="mbr-section-title display-2">Proposed method (cont')</h3>
                 <small class="mbr-section-subtitle">LMP calculation</small>
             </div>
         </div>
@@ -955,7 +956,7 @@
                 <div class="col-xs-12 col-lg-4">
 
                     <div class="mbr-testimonial card">
-                        <div class="card-block"><p>Forecasting in Generation</p></div>
+                        <div class="card-block"><p>Forecasting in VRE</p></div>
                         <div class="mbr-author card-footer">
 
 
@@ -1049,11 +1050,11 @@
     </div>
 
 </section> -->
-
+<p>\$x+y\$</p>
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q" data-rv-view="293" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
 
     <div class="container text-xs-center">
-        <p>ss</p>
+        <p>\$x+y\$</p>
     </div>
 </footer>
 
@@ -1066,7 +1067,7 @@
   <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
-
+  <script type="text/javascript" src="LaTeXMathML.js"></script>
   <input name="animation" type="hidden">
 
   </script>
