--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-
   <style>
     table, th, td {
         border: 1px solid black;
@@ -29,8 +28,6 @@
         text-align: center;
     }
   </style>
-  <script type="text/javascript" src="LaTeXMathML.js"></script>
-
 </head>
 <body>
   <section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background" id="header1-0" data-rv-view="0" style="background-image: url(assets/images/jumbotron.jpg);">
@@ -1053,7 +1050,9 @@
     </div>
 
 </section> -->
-<p>\$x+3y\$</p>
+\$x+y\$
+<img src="http://latex.codecogs.com/gif.latex?1+sin(x)" border="0"/>
+
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q" data-rv-view="293" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
 
     <div class="container text-xs-center">
@@ -1070,6 +1069,7 @@
   <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="LaTeXMathML.js"></script>
   <input name="animation" type="hidden">
 
   </script>
