--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         text-align: center;
     }
   </style>
+  <style>
+  pre .latex { border:3px solid red ; }
+</style>
 </head>
 <body>
   <section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background" id="header1-0" data-rv-view="0" style="background-image: url(assets/images/jumbotron.jpg);">
@@ -1054,7 +1057,7 @@
 \x^{3}\
 $x^{3}$
 <img src="http://latex.codecogs.com/gif.latex?x^{3}" border="0"/>
-
+<pre lang="latex"> E=mc^2 </pre>
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q" data-rv-view="293" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
 
     <div class="container text-xs-center">
@@ -1072,6 +1075,7 @@ $x^{3}$
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="LaTeXMathML.js"></script>
+  <script src="latexit.js"></script>
   <input name="animation" type="hidden">
 
   </script>
