add styles of latex

--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,17 @@
 \x^{3}\
 $x^{3}$
 <img src="http://latex.codecogs.com/gif.latex?x^{3}" border="0"/>
+<img src="http://latex.codecogs.com/svg.latex?1+sin(x)" border="0"/>
 <pre lang="latex"> E=mc^2 </pre>
+
+Here are my formulas
+<div lang="latex">1+sin(x)^2+3</div>
+<ul>
+<li lang="latex">x^2+y^2+z^2</li>
+<li>a^2+b^2</li>
+</ul>
+<p>This equation <span lang="latex">\frac{1+sin(x)}{x^3}</span>
+appears on the same line at the text.</p>
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q" data-rv-view="293" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
 
     <div class="container text-xs-center">
