add latex in footnote

--- a/index.html
+++ b/index.html
@@ -1072,6 +1072,7 @@ appears on the same line at the text.</p>
 
     <div class="container text-xs-center">
         <p>\$x^{3}\$</p>
+        <p>  <pre lang="latex"> E=mc^2 </pre> </p>
     </div>
 </footer>
 
