--- a/index.html
+++ b/index.html
@@ -350,7 +350,19 @@
         <div class="row">
             <div class="col-xs-12">
               <h3 class="mbr-section-title display-2">Proposed method (cont')</h3>
+                <small class="mbr-section-subtitle">ACOPF</small>
+            </div>
+            <div class="col-xs-12 lead"><p>xxxx</p>
+            </div>
+            <div class="col-xs-12">
                 <small class="mbr-section-subtitle">LMP calculation</small>
+            </div>
+            <div class="col-xs-12 lead"><p>The LMP at bus i can be written as follows:</p>
+              <div lang="latex">LMP_{i}=LMP^{energy}+LMP_{i}^{congestion}+LMP_{i}^{loss}</div>
+              <p>The LMP at any bus also be calculated in</p>
+              <div lang="latex">LMP_{i}=\Sum_{j=1}^{N}+\frac{\partial G_{j}}{\partial D_{j}}</div>
+
+
             </div>
         </div>
     </div>
@@ -519,7 +531,7 @@
 
 <section class="mbr-section article mbr-section__container" id="content1-l" data-rv-view="245" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
   <div>
-      <a href="https://plot.ly/~chaweewatp/127/?share_key=WcmgdMhP8HSXuZxsQGfhTt" target="_blank" title="PJM-5bus-network" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/127.png?share_key=WcmgdMhP8HSXuZxsQGfhTt" alt="PJM-5bus-network" style="min-width: 50%;width: 100px;"  width="100" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+      <a href="https://plot.ly/~chaweewatp/127/?share_key=WcmgdMhP8HSXuZxsQGfhTt" target="_blank" title="PJM-5bus-network" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/127.png?share_key=WcmgdMhP8HSXuZxsQGfhTt" alt="PJM-5bus-network" style="max-width: 100%;width: 100px;"  width="100" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
       <script data-plotly="chaweewatp:127" sharekey-plotly="WcmgdMhP8HSXuZxsQGfhTt" src="https://plot.ly/embed.js" async></script>
   </div>
 </section>
@@ -534,7 +546,7 @@
 
 
 <div>
-    <a href="https://plot.ly/~chaweewatp/38/?share_key=OwDxMlbuczAHOOhK9aFdVm" target="_blank" title="5bus-PIPSvsHeuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/38.png?share_key=OwDxMlbuczAHOOhK9aFdVm" alt="5bus-PIPSvsHeuristic-PIPS" style="min-width: 50%;width: 100px;"  width="100" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
+    <a href="https://plot.ly/~chaweewatp/38/?share_key=OwDxMlbuczAHOOhK9aFdVm" target="_blank" title="5bus-PIPSvsHeuristic-PIPS" style="display: block; text-align: center;"><img src="https://plot.ly/~chaweewatp/38.png?share_key=OwDxMlbuczAHOOhK9aFdVm" alt="5bus-PIPSvsHeuristic-PIPS" style="max-width: 100%;width: 100px;"  width="100" onerror="this.onerror=null;this.src='https://plot.ly/404.png';" /></a>
     <script data-plotly="chaweewatp:38" sharekey-plotly="OwDxMlbuczAHOOhK9aFdVm" src="https://plot.ly/embed.js" async></script>
 </div>
 
