--- a/index.html
+++ b/index.html
@@ -357,12 +357,11 @@
             <div class="col-xs-12">
                 <small class="mbr-section-subtitle">LMP calculation</small>
             </div>
-            <div class="col-xs-12 lead"><p>The LMP at bus i can be written as follows:</p>
+            <div class="container text-xs-center">
+              <p>The LMP at bus i can be written as follows:</p>
               <div lang="latex">LMP_{i}=LMP^{energy}+LMP_{i}^{congestion}+LMP_{i}^{loss}</div>
               <p>The LMP at any bus also be calculated in</p>
-              <div lang="latex">LMP_{i}=\Sum_{j=1}^{N}+\frac{\partial G_{j}}{\partial D_{j}}</div>
-
-
+              <div lang="latex"> LMP_{i}=\Sum_{j=1}^{N} C^{T} + \frac{\partial G_{j}}{\partial D_{j}} </div>
             </div>
         </div>
     </div>
