--- a/index.html
+++ b/index.html
@@ -354,24 +354,24 @@
             </div>
             <div class="col-xs-12 lead">
               <p>In transmission system can be fomulted as minimize:</p>
-              <div lang="latex"> \sum_{i=1}^{N} (C_{G_{i}} \times P_{G_{i}} </div>
+              <div  lang="latex" class="container text-xs-center"> \sum_{i=1}^{N} (C_{G_{i}} \times P_{G_{i}} </div>
               <p>Subject to:</p>
-              <div lang="latex"> P_{G_{i}} - P_{L_{i}} - P(V,\theta) = 0 </div>
-              <div lang="latex"> Q_{Gi}-Q_{Li}-Q(V,\theta)=0 </div>
-              <div lang="latex"> |F_{k}|=F_{k}^{max} </div>
-              <div lang="latex"> P_{Gi}^{min} \leq P_{Gi} \leq P_{Gi}^{max} </div>
-              <div lang="latex"> Q_{Gi}^{min} \leq Q_{Gi} \leq Q_{Gi}^{max} </div>
-              <div lang="latex"> V_{i}^{min} \leq V_{i} \leq V_{i}^{max} </div>
+              <div lang="latex" class="container text-xs-center"> P_{G_{i}} - P_{L_{i}} - P(V,\theta) = 0 </div>
+              <div lang="latex" class="container text-xs-center"> Q_{Gi}-Q_{Li}-Q(V,\theta)=0 </div>
+              <div lang="latex" class="container text-xs-center"> |F_{k}|=F_{k}^{max} </div>
+              <div lang="latex" class="container text-xs-center"> P_{Gi}^{min} \leq P_{Gi} \leq P_{Gi}^{max} </div>
+              <div lang="latex" class="container text-xs-center"> Q_{Gi}^{min} \leq Q_{Gi} \leq Q_{Gi}^{max} </div>
+              <div lang="latex" class="container text-xs-center"> V_{i}^{min} \leq V_{i} \leq V_{i}^{max} </div>
               <p>where:</p>
-              <p><div lang="latex">C_{Gi}</div> is generation cost of generator <div lang="latex">G_i</div> ($/MWhr). <div lang="latex">P_{Gi}</div> and <div lang="latex">Q_{Gi}</div> are real and reactive power output of generator <div lang="latex">G_{i}</div> (MW, MVar). <div lang="latex">P_{Gi}^{min}</div> and <div lang="latex">P_{Gi}^{max}</div> are minimum and maximum limit of <div lang="latex"> P_{Gi} </div>. <div lang="latex">Q_{Gi}^{min}</div> and <div lang="latex">Q_{Gi}^{max}</div> are minimum and maximum limit of <div lang="latex"> Q_{Gi} </div>. <div lang="latex">P_{Li}</div> and <div lang="latex">Q_{Li}</div> are real and reactive power demand of load <div lang="latex">L_{i}</div> (MW, MVar). <div lang="latex">F_{k}</div> and <div lang="latex">F_{k}^{max}</div> are line flow and its maximum limit at bus i. <div lang="latex">V_{i}^{min}</div> and <div lang="latex">V_{i}^{max}</div> are minimum and maximum voltage limit at bus i.</p>
+              <p><span lang="latex">C_{Gi}</span> is generation cost of generator <span lang="latex">G_i</span> ($/MWhr). <span lang="latex">P_{Gi}</span> and <span lang="latex">Q_{Gi}</span> are real and reactive power output of generator <span lang="latex">G_{i}</span> (MW, MVar). <span lang="latex">P_{Gi}^{min}</span> and <span lang="latex">P_{Gi}^{max}</span> are minimum and maximum limit of <span lang="latex"> P_{Gi} </span>. <span lang="latex">Q_{Gi}^{min}</span> and <span lang="latex">Q_{Gi}^{max}</span> are minimum and maximum limit of <span lang="latex"> Q_{Gi} </span>. <span lang="latex">P_{Li}</span> and <span lang="latex">Q_{Li}</span> are real and reactive power demand of load <span lang="latex">L_{i}</span> (MW, MVar). <span lang="latex">F_{k}</span> and <span lang="latex">F_{k}^{max}</span> are line flow and its maximum limit at bus i. <span lang="latex">V_{i}^{min}</span> and <span lang="latex">V_{i}^{max}</span> are minimum and maximum voltage limit at bus i.</p>
             </div>
             <div class="col-xs-12">
                 <small class="mbr-section-subtitle">LMP calculation</small>
             </div>
             <div class="col-xs-12 lead"><p>The LMP at bus i can be written as follows:</p>
-              <div lang="latex">LMP_{i}=LMP^{energy}+LMP_{i}^{congestion}+LMP_{i}^{loss}</div>
+              <div lang="latex" class="container text-xs-center">LMP_{i}=LMP^{energy}+LMP_{i}^{congestion}+LMP_{i}^{loss}</div>
               <p>The LMP at any bus also be calculated in:</p>
-              <div lang="latex"> LMP_{i}=\sum_{j=1}^{N} (C^{T} + \frac{\partial G_{j}}{\partial D_{j}}) </div>
+              <div lang="latex" class="container text-xs-center"> LMP_{i}=\sum_{j=1}^{N} (C^{T} + \frac{\partial G_{j}}{\partial D_{j}}) </div>
             </div>
         </div>
     </div>
