--- a/index.html
+++ b/index.html
@@ -330,6 +330,21 @@
                                 </div>
                             </div>
                         </div>
+                    </div><div class="mbr-section mbr-section-hero carousel-item dark center" data-bg-video-slide="false">
+                        <div class="mbr-table-cell">
+
+                            <div class="container-slide">
+                                <img src="assets/images/pesudo_code-1600x900.png">
+                                <div class="row">
+                                    <div class="col-md-8 col-md-offset-3 text-xs-right">
+
+
+
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
