--- a/index.html
+++ b/index.html
@@ -769,6 +769,12 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 lead"><p>Accuracy&nbsp;</p>
+              <p>Comparision between results from pure brute force and combine heuristic-brute force</p>
+              <p>MAE ($/MWhr)</p>
+              <div lang="latex" class="container text-xs-center">MAE=\frac{1}{N}\sum_{i=1}^{N}|p_{i}-\hat{p}_{i}|</div>
+              <div lang="latex" class="container text-xs-center">MAPE=\frac{100}{N}\sum_{i=1}^{N}|\frac{p_{i}-\hat{p}_{i}}{p_{i}}|</div>
+              where; <span lang="latex">p_{i}</span> and <span lang="latex">\hat{p}_{i}</span> are LMP values from prue brute force and combine heuristic-brute force. <span lang="latex">N</span> is number of LMP vlues from any quantile in every bus.
+
               <table style="width:100%">
                 <tr>
                   <th>System</th>
@@ -788,6 +794,7 @@
               </table>
 
               <p>Speed-up performance</p>
+              <p>The speed-up performance shows time reduction in percentage. The base calculation time are 65.67 and 1203.06 seconds for PJM 5 bus system and IEEE 118 bus system, respectively.</p>
               <table style="width:100%">
                 <tr>
                   <th>System</th>
@@ -913,6 +920,21 @@
   </div>
 
 </section>
+<section class="mbr-section mbr-section__container article" id="header3-7" data-rv-view="97" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+              <h3 class="mbr-section-title display-2">Summary</h3>
+              <ul>1</ul>
+              <ul>2</ul>
+              <ul>3</ul>
+
+            </div>
+
+        </div>
+    </div>
+</section>
+
 
 <section class="mbr-section mbr-parallax-background" id="testimonials3-i" data-rv-view="231" style="background-image: url(assets/images/landscape2.jpg); padding-top: 120px; padding-bottom: 120px;">
 
@@ -1032,26 +1054,11 @@
     </div>
 
 </section> -->
-\$x^{y}\$
-\x^{3}\
-$x^{3}$
-<img src="http://latex.codecogs.com/gif.latex?x^{3}" border="0"/>
-<img src="http://latex.codecogs.com/svg.latex?1+sin(x)" border="0"/>
-<pre lang="latex"> E=mc^2 </pre>
 
-Here are my formulas
-<div lang="latex">1+sin(x)^2+3</div>
-<ul>
-<li lang="latex">x^2+y^2+z^2</li>
-<li>a^2+b^2</li>
-</ul>
-<p>This equation <span lang="latex">\frac{1+sin(x)}{x^3}</span>
-appears on the same line at the text.</p>
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q" data-rv-view="293" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
 
     <div class="container text-xs-center">
-        <p>\$x^{3}\$</p>
-        <p>  <pre lang="latex"> E=mc^2 </pre> </p>
+        <p>Copy Right@2018, Pornchai Chaweewat</p>
     </div>
 </footer>
 
